vlib/v/checker/tests/mod_op_wrong_right_type_err_b.out
vlib/v/checker/tests/mod_op_wrong_right_type_err_b.v:2:6: error: mismatched types `any_int` and `array_int` 
    1 | fn main() {
    2 |     1 % [1,2,3]
      |         ~~~~~~~
    3 | }
