vlib/v/checker/tests/mod_op_wrong_right_type_err_b.vv
fn main() {
	println(1 % [1,2,3])
}
